--- a/chamber/styles/chamber-short.css
+++ b/chamber/styles/chamber-short.css
@@ -19,6 +19,45 @@
   --transition: all 0.3s ease-in-out;
 }
 
+body {
+  font-family: var(--font-family);
+  font-size: var(--font-size-base);
+  color: var(--text-color);
+  background-color: var(--background-color);
+}
+.container {
+  max-width: 1380px;
+  margin: 0 auto;
+}
+
+footer {
+  background-color: var(--primary-color);
+  color: var(--text-light-color);
+  padding: var(--spacing-large);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: var(--spacing-medium);
+  text-align: center;
+}
+
+footer section {
+  padding: var(--spacing-medium);
+}
+
+footer .social-media a img {
+  width: 50px;
+  height: 50px;
+  transition: var(--transition);
+  margin: 0 30px;
+  cursor: pointer;
+  color: var(--background-color);
+}
+
+footer .social-media a img:hover {
+  transform: scale(1.1);
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -136,16 +175,22 @@ a {
 
 .grid section {
   background-color: var(--secondary-color);
+  color: var(--text-light-color);
   text-align: center;
   min-height: 350px;
+  padding: 20px;
+  margin: 20px;
 }
 
 .grid h2,
 .list h2 {
-  color: white;
-  background-color: var(--primary-color);
+  color: var(--primary-color);
+  font-size: 1.3rem;
+  width: 100%;
   text-align: center;
-  padding: 1rem;
+  padding: 0.5rem;
+  background-color: var(--accent-color);
+  margin-bottom: 2rem;
 }
 
 section p,
@@ -167,6 +212,7 @@ section a {
 }
 
 .list {
+  margin: 20px;
   display: flex;
   flex-direction: column;
   padding: var(--spacing-large);
@@ -184,7 +230,6 @@ section a {
 
 .list img {
   display: none;
-  
 }
 .menu img {
   transition: var(--transition);
@@ -214,4 +259,115 @@ section a {
 .list a {
   color: var(--backgroundColor);
   text-decoration: underline;
+}
+
+.events-weather,
+#business-sum {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  margin: 0.5rem 1rem;
+  min-height: 120px;
+}
+
+.events-weather > div {
+  background-color: var(--secondary-color);
+  color: var(--text-light-color);
+  width: 100%;
+  text-shadow: 1px 1px 2px var(--primary-color);
+  border-radius: 1rem;
+}
+
+.events-weather > div > h3 {
+  font-size: 1.3rem;
+  width: 100%;
+  text-align: center;
+  padding: 0.5rem;
+  color: var(--primary-color);
+  background-color: var(--accent-color);
+}
+
+.events-weather > div > div {
+  font-size: 1rem;
+  padding: 0.5rem 1rem;
+  text-align: center;
+}
+
+#current-weather p {
+  padding: 0 0.5rem;
+}
+
+#weather-cast p {
+  padding: 0.5rem 1rem;
+}
+.home-title {
+  font-size: 2.5rem;
+  text-align: center;
+  color: var(--primary-color);
+  margin: 20px;
+}
+#business-sum {
+  margin-top: 4rem;
+  margin-bottom: 2rem;
+}
+#business-sum section {
+  padding: 40px;
+  background-color: #eaeaea;
+  text-align: center;
+  padding-bottom: 1rem;
+}
+
+#business-sum h3 {
+  background-color: var(--secondary-color);
+  padding: 0.5rem;
+  font-size: 1.2rem;
+  color: var(--primary-color);
+}
+
+#business-sum li,
+#business-sum a {
+  color: var(--secondary-color);
+  margin: 0;
+  padding: 0.2rem;
+}
+
+#business-sum img {
+  height: 8rem;
+  width: 8rem;
+  padding: 0.5rem;
+  object-fit: cover;
+  border-radius: 5rem;
+}
+
+.hero {
+  position: relative;
+}
+
+.hero img {
+  height: 21rem;
+  width: 100%;
+  object-fit: cover;
+  border-bottom: 0.4rem solid var(--secondary-color);
+}
+
+.hero a {
+  position: absolute;
+  font-size: 1.3rem;
+  background-color: var(--secondary-color);
+  color: var(--text-light-color);
+  top: 15rem;
+  padding: 0.8rem 2rem;
+  right: 8vw;
+  border-radius: 2rem;
+  border: 3px solid var(--accent1-color);
+  transition: var(--transition); 
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 
+}
+
+.hero a:hover {
+  background-color: var(--accent1-color);
+  color: var(--accent-color);
+  transform: scale(1.3); 
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 1);
+  border: #1e1a1a; 
 }
