--- a/chamber/styles/chamber-large.css
+++ b/chamber/styles/chamber-large.css
@@ -1,3 +1,24 @@
+:root {
+  --primary-color: #003366;
+  --secondary-color: #005f99;
+  --accent-color: #ffcc00;
+  --background-color: #f5f5f5;
+  --text-color: #333333;
+  --text-light-color: #ffffff;
+  --font-family: "Roboto", sans-serif;
+  --font-size-base: 16px;
+  --font-size-large: 18px;
+  --font-size-small: 14px;
+  --spacing-small: 8px;
+  --spacing-medium: 16px;
+  --spacing-large: 24px;
+  --border-radius: 10px;
+  --box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  --image-width: 75px;
+  --image-height: 75px;
+  --transition: all 0.3s ease-in-out;
+}
+
 @media screen and (min-width: 640px) {
   header {
     display: grid;
@@ -107,5 +128,85 @@
 
   #business-sum section {
     margin: 10px;
+  }
+
+  .join-page {
+   
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+    padding: 20px;
+  }
+  
+  .join-form {
+    background: var();
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 1px 4px var(--primary-color);
+    width: 100%;
+    max-width: 800px;
+  }
+  .form-title {
+    text-align: center;
+    margin-bottom: 20px;
+    color: var(--secondary-color);
+  }
+  h3 {
+    text-align: center;
+    margin-bottom: 20px;
+    color: var(--secondary-color);
+  }
+  
+  fieldset {
+    border: none;
+    margin-bottom: 20px;
+  }
+  
+  legend {
+    font-weight: bold;
+    margin-bottom: 10px;
+    color: var(--secondary-color);
+  }
+  
+  label {
+    display: block;
+    margin-bottom: 5px;
+    font-size: 14px;
+  }
+  
+  input,
+  textarea {
+    width: 100%;
+    padding: 10px;
+    margin-top: 5px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 14px;
+  }
+  
+  input[type="radio"] {
+    width: auto;
+    margin-right: 5px;
+  }
+  
+  textarea {
+    resize: vertical;
+  }
+  
+  input[type="submit"] {
+    display: block;
+    width: 100%;
+    padding: 10px;
+    background: var(--secondary-color);
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
+  
+  input[type="submit"]:hover {
+    background: var(--primary-color)
   }
 }
