--- a/chamber/styles/chamber-short.css
+++ b/chamber/styles/chamber-short.css
@@ -386,7 +386,7 @@ section a {
 }
 
 .join-form {
-  background: var();
+  background: var(--text-light-color);
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0 1px 4px var(--primary-color);
