--- a/chamber/styles/chamber-large.css
+++ b/chamber/styles/chamber-large.css
@@ -19,7 +19,7 @@
   --transition: all 0.3s ease-in-out;
 }
 
-@media screen and (min-width: 640px) {
+@media screen and (min-width: 540px) {
   header {
     display: grid;
     grid-template-columns: 0.1fr 1fr 1fr;
@@ -131,13 +131,12 @@
   }
 
   .join-page {
-   
     display: grid;
     grid-template-columns: 1fr 1fr;
     align-items: center;
     padding: 20px;
   }
-  
+
   .join-form {
     background: var(--text-light-color);
     padding: 20px;
@@ -156,24 +155,24 @@
     margin-bottom: 20px;
     color: var(--secondary-color);
   }
-  
+
   fieldset {
     border: none;
     margin-bottom: 20px;
   }
-  
+
   legend {
     font-weight: bold;
     margin-bottom: 10px;
     color: var(--secondary-color);
   }
-  
+
   label {
     display: block;
     margin-bottom: 5px;
     font-size: 14px;
   }
-  
+
   input,
   textarea {
     width: 100%;
@@ -183,16 +182,16 @@
     border-radius: 5px;
     font-size: 14px;
   }
-  
+
   input[type="radio"] {
     width: auto;
     margin-right: 5px;
   }
-  
+
   textarea {
     resize: vertical;
   }
-  
+
   input[type="submit"] {
     display: block;
     width: 100%;
@@ -205,8 +204,44 @@
     cursor: pointer;
     transition: background-color 0.3s ease;
   }
-  
+
   input[type="submit"]:hover {
-    background: var(--primary-color)
+    background: var(--primary-color);
+  }
+  .grid-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+    padding: 20px;
+  }
+  .main-content {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .photo-gallery {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 10px;
+    padding: 10px;
+    margin: 20px;
+  }
+
+  .lazy-load {
+    display: block;
+    width: 100%;
+    height: auto;
+    opacity: 0.5;
+    transition: opacity 0.3s ease-in-out;
+  }
+ 
+
+  .lazy-load.lazy-loaded {
+    opacity: 1;
+  }
+
+  .photo-gallery img:hover {
+    transform: scale(1.1);
+    opacity: 0.9;
   }
 }
